implemented the qa feedback feature

--- a/checkvite/templates/base.html
+++ b/checkvite/templates/base.html
@@ -18,7 +18,7 @@
             <a id="tab_verified" class="button outline tablinks">Verified</a>
             <a id="tab_to_train" class="button outline tablinks">To Train</a>
             <a id="tab_stats" class="button outline tablinks">Stats</a>
-            <a id="tab_check" class="button outline tablinks">Check</a>
+            <a id="tab_check" class="button outline tablinks">QA Check</a>
             <a id="tab_help" class="button outline tablinks">Guidelines</a>
             <a class="button outline tablinks" id="backward">⬅️</a>
             <a class="button outline tablinks" id="forward">➡️</a>
